Qt version 5.12.1 and Android ndk r19